--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,14 @@ remote_theme: mmistakes/minimal-mistakes
 title: Rick's portfolio
 plugins:
   - jekyll-include-cache
+author:
+  name: "Rick Theeuwes"
+  bio: "A hacker with a passion for development."
+  avatar: "/assets/images/avatar.jpg"
+  links:
+    - label: "Email"
+      icon: "fas fa-fw -fa-envelope-square"
+      url: "mailto:r.theeuwes@student.fontys.nl"
+    - label: "Github"
+      icon: "fab fa-fw fa-github-square"
+      url: "https://github.com/riqky"
