--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@ main:
   - title: "Home"
     url: "/"
   - title: "About me"
-    url: "/about"
+    url: "/about/"
   - title: "Planning"
-    url: "planning"
+    url: "/planning/"
   - title: "R&D Project"
-    url: "rnd"
+    url: "/rnd/"
