--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,11 @@ author:
     - label: "Github"
       icon: "fab fa-fw fa-github-square"
       url: "https://github.com/riqky"
+
+defaults:
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
